[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fo76datamine"
version = "0.1.0"
description = "Fallout 76 datamining tool - parse ESM, track changes, find unreleased content"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "Pillow>=9.2",
    "tomli>=1.0; python_version < '3.11'",
]

[project.scripts]
fo76dm = "fo76datamine.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
